[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pid-tuner"
version = "0.1.0"
description = "FPC PID Tuner CLI tools"
authors = [{ name = "bMagSquatch" }]
dependencies = [
  "pandas",
  "matplotlib",
  "typer",
  "click",        # Typer's base dependency
  "shellingham",  # for "typer install-completion"
  "rich",
]

[project.scripts]
pid-tuner = "pid_tuner.cli:app"
